--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -311,6 +311,13 @@ html, body {
     border-bottom: 1px solid #CECECE;
     font-size: 16px;
     color: #CECECE; }
+  .pagination span {
+    height: 26px;
+    line-height: 43px;
+    font-size: 16px;
+    color: #CECECE;
+    margin-left: 10px;
+    margin-right: 10px; }
   .pagination .active {
     color: #4A4A4A;
     border-bottom: 1px solid #4A4A4A; }
