--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -388,6 +388,14 @@ html, body {
     font-size: 16px;
     color: #CECECE;
   }
+  span {
+    height: 26px;
+    line-height: 43px;
+    font-size: 16px;
+    color: #CECECE;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
   .active {
     color: #4A4A4A;
     border-bottom: 1px solid #4A4A4A;
