--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -317,7 +317,7 @@ html, body {
     font-size: 16px;
     color: #CECECE;
     margin-left: 10px;
-    margin-right: 10px; }
+    letter-spacing: 2px; }
   .pagination .active {
     color: #4A4A4A;
     border-bottom: 1px solid #4A4A4A; }
