--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -394,7 +394,7 @@ html, body {
     font-size: 16px;
     color: #CECECE;
     margin-left: 10px;
-    margin-right: 10px;
+    letter-spacing: 2px;
   }
   .active {
     color: #4A4A4A;
