--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2207,6 +2207,10 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
   top: 0px !important;
 }
 
+[id*='imageAlign'] {
+  display: none;
+}
+
 
 #imageAlign-1, #imageDisplay-1, #imageStyle-1, #imageAlt-1, #imageSize-1 {
   display: none;
