--- a/plugins/rainlab/googleanalytics/reportwidgets/toppages/partials/_widget.htm
+++ b/plugins/rainlab/googleanalytics/reportwidgets/toppages/partials/_widget.htm
@@ -29,7 +29,7 @@
                     <?php endforeach ?>
                     <?php if (!count($rows)): ?>
                         <tr>
-                            <td colspan="3"><?= e(trans('rainlab.googleanalytics::lang.widgets.noresult_toppages')) ?></td>
+                            <td colspan="3">---<?= e(trans('rainlab.googleanalytics::lang.widgets.noresult_toppages')) ?></td>
                         </tr>
                     <?php endif ?>
                 </tbody>
