--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5541,3 +5541,6 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
 [data-cmd=imageAlign], [data-cmd=imageDisplay], [data-cmd=imageStyle],
 [data-cmd=imageAlt], [data-cmd=imageSize] {
   display: none !important; }
+
+#ReportContainer-container-toolbar {
+  display: none; }
