--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -58,6 +58,9 @@ input:-webkit-autofill {
   right: 20px;
   display: none; }
 
+.dark-menu {
+  color: #464646; }
+
 .section-txt p, .section-txt-village p, .section-txt-comarca p {
   color: #9B9B9B;
   font-size: 18px;
