--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -58,7 +58,7 @@ input:-webkit-autofill {
   right: 20px;
   display: none; }
 
-.dark-menu {
+.elements .menu-list ul li .dark-menu {
   color: #464646; }
 
 .section-txt p, .section-txt-village p, .section-txt-comarca p {
