--- a/plugins/rainlab/pages/assets/scss/style-event.scss
+++ b/plugins/rainlab/pages/assets/scss/style-event.scss
@@ -217,6 +217,7 @@
   // background-position: center;
   position: absolute;
   bottom: -13%;
+  left: 0px;
   z-index: 999;
   @include flexbox();
   align-items: center;
