--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -1446,6 +1446,7 @@ html, body {
         position: absolute;
         width: 100%;
         height: 100%;
+        top: 0px;
         left: 0;
         object-fit: cover;
       }
@@ -1454,6 +1455,8 @@ html, body {
         position: absolute;
         width: 100%;
         height: 100%;
+        top: 0px;
+        left: 0px;
         background: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.68) 100%);
         z-index: 1;
       }
