--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -1638,14 +1638,17 @@ html, body {
         width: 100%;
         height: 100%;
         object-fit: cover;
-        left: 0px; }
+        left: 0px;
+        top: 0px; }
       .contact-ways .way .pic-way:before {
         content: '';
         position: absolute;
         width: 100%;
         height: 100%;
         background: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.68) 100%);
-        z-index: 1; }
+        z-index: 1;
+        top: 0px;
+        left: 0px; }
       .contact-ways .way .pic-way .icon-container {
         z-index: 80;
         display: -webkit-box;
