--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -1086,6 +1086,7 @@ html, body {
     background: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.68) 100%);
     z-index: 5;
     left: 0px;
+    top: 0px;
   }
   .img-header {
       width: 100%;
