--- a/plugins/rainlab/pages/assets/scss/style-comarcas.scss
+++ b/plugins/rainlab/pages/assets/scss/style-comarcas.scss
@@ -306,6 +306,7 @@
             justify-content: center;
             img {
               max-width: 23px;
+              max-height: 23px;
             }
           }
           .con-encanto {
@@ -322,6 +323,7 @@
             justify-content: center;
             img {
               max-width: 23px;
+              max-height: 23px;
             }
           }
             .main-section-comarcas .main-events-container .event .txt-container .icons .icon-pair p {
