--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -41,7 +41,7 @@
   font-weight: normal;
   font-style: normal; }
 
-.send-info:has(a) {
+.send-info:not(a) {
   display: none !important; }
 
 .navigation {
