--- a/themes/default/partials/site/menu.htm
+++ b/themes/default/partials/site/menu.htm
@@ -32,10 +32,12 @@
             {% set tt = '.'~item.title %}
             <li class="menu-item"><a href="{{ item.url }}">{{ tt|_ }}</a></li>
           {% endfor %}
+          <li class="menu-item"><a class="dark-menu" href="{{url('/')}}/{{lang}}/comarcas">{{ 'Comarcas'|_ }}</a></li>
+          <li class="menu-item"><a class="dark-menu" href="{{url('/')}}/{{lang}}/municipios">{{ 'Munucipios'|_ }}</a></li>
         </ul>
         <ul class="menu-mobile">
-          <li class="menu-item"><a href="{{url('/')}}/{{lang}}/comarcas">{{ 'Comarcas'|_ }}</a></li>
-          <li class="menu-item"><a href="{{url('/')}}/{{lang}}/municipios">{{ 'Munucipios'|_ }}</a></li>
+          <li class="menu-item"><a class="dark-menu" href="{{url('/')}}/{{lang}}/comarcas">{{ 'Comarcas'|_ }}</a></li>
+          <li class="menu-item"><a class="dark-menu" href="{{url('/')}}/{{lang}}/municipios">{{ 'Munucipios'|_ }}</a></li>
         </ul>
       </div>
 
@@ -65,7 +67,7 @@
               <li class="menu-item"><a href="{{ staticMenu2.menuItems[i].url }}">{{ tt|_ }}</a></li>
             {%endif%}
           {% endfor %}
-            <li class="menu-item"><a href="{{url('/')}}/{{lang}}/todos-los-eventos">{{ 'Todos los eventos'|_ }}</a></li>
+            <li class="menu-item"><a class="dark-menu" href="{{url('/')}}/{{lang}}/todos-los-eventos">{{ 'Todos los eventos'|_ }}</a></li>
         </ul>
       </div>
 
