--- a/themes/default/partials/site/search.htm
+++ b/themes/default/partials/site/search.htm
@@ -44,7 +44,7 @@
             <option value="playa y naturaleza">{{'Playa y naturaleza'|_ }}</option>
             <option value="vino y tradición">{{'Vino y tradición'|_ }}</option>
             <option value="aventura y tradición">{{'Aventura y tradición'|_ }}</option>
-            <option value="all" selected=>{{'Todos los intereses'|_ }}</option>
+            <option value="all" selected>{{'Todos los intereses'|_ }}</option>
           </select>
           <span class="select-title">{{ 'INTERESES'|_ }}</span>
         </div>
