--- a/plugins/rainlab/pages/widgets/eventolist/partials/_treebranch.htm
+++ b/plugins/rainlab/pages/widgets/eventolist/partials/_treebranch.htm
@@ -1,4 +1,4 @@
-<?php foreach ($items as $pageObj): ?>    
+<?php foreach ($items as $pageObj): ?>
     <?php
         $fileName = $pageObj->page->getBaseFileName();
         $groupStatus = $this->getCollapseStatus($fileName);
@@ -7,19 +7,19 @@
         $cbId = 'cb'.md5($fileName);
     ?>
     <li
-        class="<?= $pageObj->subpages ? 'has-subitems' : null ?>" 
+        class="<?= $pageObj->subpages ? 'has-subitems' : null ?>"
         data-status="<?= $groupStatus || !$pageObj->subpages ? 'expanded' : 'collapsed' ?>"
         data-group-id="<?= e($fileName) ?>"
         data-item-path="<?= e($fileName) ?>"
         <?php if ($searchMode): ?>data-no-drag-mode<?php endif ?>
         data-id="<?= e($dataId) ?>"
     >
-    <a class='duplicate' data-request='onCopyEvent' data-request-data="fileNamePost: '<?= e($fileName) ?>' , fileUrlPost: '<?= $pageObj->page->getViewBag()->property('url') ?>', fileTitlePost: '<?= $pageObj->page->getViewBag()->property('title') ?>'">duplicar</a>
+    <a class='duplicate' data-request='onCopyEvent' data-request-data="fileNamePost: '<?= e($fileName) ?>' , fileUrlPost: '<?= $pageObj->page->getViewBag()->property('url') ?>', fileTitlePost: '<?= $pageObj->page->getViewBag()->property('title') ?>'"> <img src="{{preurl}}/storage/app/media/uploaded-files/templates/brush-header.svg" alt=""> </a>
         <div>
 
             <a href="#">
                 <div>
-                    <?= e($pageObj->page->getViewBag()->property('title')) ?>                    
+                    <?= e($pageObj->page->getViewBag()->property('title')) ?>
                     <p><span class="comment date_start_pretty_num"><?= e($pageObj->date_start_pretty_num) ?></span></p>
                     <?php if ($pageObj->page->getViewBag()->property('is_hidden') == 1): ?>
                         <p><span class="comment borrador">BORRADOR</span></p>
@@ -45,4 +45,3 @@
         </ol>
     </li>
 <?php endforeach ?>
-     
