--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5544,3 +5544,11 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
 
 #ReportContainer-container-toolbar {
   display: none; }
+
+/* Botón duplicar */
+.control-treeview ol > li {
+  position: relative; }
+
+.duplicate {
+  position: absolute;
+  z-index: 10; }
