--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5551,4 +5551,9 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
 
 .duplicate {
   position: absolute;
-  z-index: 10; }
+  z-index: 10;
+  top: 29px;
+  right: 8px; }
+  .duplicate img {
+    width: 16px;
+    height: auto; }
