--- a/plugins/rainlab/pages/widgets/eventolist/partials/_treebranch.htm
+++ b/plugins/rainlab/pages/widgets/eventolist/partials/_treebranch.htm
@@ -14,9 +14,10 @@
         <?php if ($searchMode): ?>data-no-drag-mode<?php endif ?>
         data-id="<?= e($dataId) ?>"
     >
-    <a class='duplicate' data-request='onCopyEvent' data-request-data="fileNamePost: '<?= e($fileName) ?>' , fileUrlPost: '<?= $pageObj->page->getViewBag()->property('url') ?>', fileTitlePost: '<?= $pageObj->page->getViewBag()->property('title') ?>'"><img src="/storage/app/media/uploaded-files/templates/duplicate.svg"></a>
         <div>
-
+          <a class='duplicate' data-request='onCopyEvent' data-request-data="fileNamePost: '<?= e($fileName) ?>' , fileUrlPost: '<?= $pageObj->page->getViewBag()->property('url') ?>', fileTitlePost: '<?= $pageObj->page->getViewBag()->property('title') ?>'">
+            <img src="/storage/app/media/uploaded-files/templates/duplicate.svg">
+          </a>
             <a href="#">
                 <div>
                     <?= e($pageObj->page->getViewBag()->property('title')) ?>
