--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -1369,6 +1369,15 @@ nav#layout-mainmenu.navbar-mode-inline ul.mainmenu-nav li:first-child {
   }
 }
 
+.control-treeview ol > li.dragged div + .duplicate, .control-treeview ol > li > div:hover + .duplicate {
+  img {
+    -webkit-filter: brightness(10);
+    filter: brightness(10);
+    -moz-filter: brightness(10);
+
+  }
+}
+
 .control-treeview.treeview-light ol > li > div > ul.submenu li {
   background-color: $blue;
   border-right: 1px solid $blue;
