--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5553,12 +5553,14 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
 /* Botón duplicar */
 .control-treeview ol > li {
   position: relative; }
+  .control-treeview ol > li div > div {
+    width: 80%; }
 
 .duplicate {
   position: absolute;
   z-index: 10;
-  top: 29px;
-  right: 8px; }
+  top: 6px;
+  right: 32px; }
   .duplicate img {
-    width: 16px;
+    width: 21px;
     height: auto; }
