--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2228,7 +2228,7 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
 /* Botón duplicar */
 .control-treeview ol > li {
   position: relative;
-  div > div {
+  div > a > div {
     width: 80%;
   }
 }
