--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2237,6 +2237,7 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
   z-index: 10;
   top: 6px;
   right: 32px;
+  cursor: pointer;
   img {
     width: 19px;
     height: auto;
