--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -4931,7 +4931,8 @@ nav#layout-mainmenu.navbar-mode-inline ul.mainmenu-nav li:first-child {
   .control-treeview ol > li.dragged div .link-prensa, .control-treeview ol > li > div:hover .link-prensa {
     color: #ffffff; }
 
-.control-treeview ol > li.dragged div + .duplicate img, .control-treeview ol > li > div:hover + .duplicate img {
+.control-treeview ol > li.dragged div + .duplicate img, .control-treeview ol > li > div:hover + .duplicate img,
+.control-treeview ol > li.active > div + .duplicate img {
   -webkit-filter: brightness(10);
   filter: brightness(10);
   -moz-filter: brightness(10); }
