--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -1369,7 +1369,8 @@ nav#layout-mainmenu.navbar-mode-inline ul.mainmenu-nav li:first-child {
   }
 }
 
-.control-treeview ol > li.dragged div + .duplicate, .control-treeview ol > li > div:hover + .duplicate {
+.control-treeview ol > li.dragged div + .duplicate, .control-treeview ol > li > div:hover + .duplicate,
+.control-treeview ol > li.active > div + .duplicate {
   img {
     -webkit-filter: brightness(10);
     filter: brightness(10);
