--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5566,3 +5566,8 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
   .duplicate img {
     width: 17px;
     height: auto; }
+
+/* CUSTOM EDITOR TOOLBAR */
+.custom-wysiwyg img {
+  height: 14px;
+  width: auto; }
