--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2244,3 +2244,11 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
     height: auto;
   }
 }
+
+/* CUSTOM EDITOR TOOLBAR */
+.custom-wysiwyg {
+  img {
+    height: 14px;
+    width: auto;
+  }
+}
