--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5568,6 +5568,13 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
     height: auto; }
 
 /* CUSTOM EDITOR TOOLBAR */
-.custom-wysiwyg img {
-  height: 14px;
-  width: auto; }
+.custom-wysiwyg {
+  width: auto;
+  height: 38px;
+  cursor: pointer;
+  padding: 0px; }
+  .custom-wysiwyg img {
+    height: 14px;
+    width: auto;
+    margin: 12px 12px;
+    text-align: center; }
