--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2247,7 +2247,8 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
 
 /* CUSTOM EDITOR TOOLBAR */
 .custom-wysiwyg {
-  width: auto;
+  width: 38px;
+  display: block;
   height: 38px;
   cursor: pointer;
   padding: 0px;
@@ -2256,5 +2257,8 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
     width: auto;
     margin: 12px 12px;
     text-align: center;
+  }
+  &:hover {
+    background: #dddddd;
   }
 }
