--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2248,7 +2248,7 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
 /* CUSTOM EDITOR TOOLBAR */
 .custom-wysiwyg {
   width: 38px;
-  display: block;
+  display: inline-block;
   height: 38px;
   cursor: pointer;
   padding: 0px;
