--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3587,3 +3587,15 @@ footer {
   font-size: 14px;
   line-height: 20px;
 }
+
+/* MOCK-SPACE */
+.mock-insert {
+  display: none;
+}
+.field-richeditor .mock-insert {
+  width: 100%;
+  background-color: #CECECE;
+  color: #818181;
+  font-size: 14px;
+  text-align: left;
+}
