--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3594,6 +3594,7 @@ footer {
 }
 .field-richeditor .mock-insert {
   width: 100%;
+  display: block !important;
   background-color: #CECECE;
   color: #818181;
   font-size: 14px;
