--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3241,6 +3241,7 @@ footer {
 
 .field-richeditor .mock-insert {
   width: 100%;
+  display: block !important;
   background-color: #CECECE;
   color: #818181;
   font-size: 14px;
