--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3245,4 +3245,6 @@ footer {
   background-color: #CECECE;
   color: #818181;
   font-size: 14px;
-  text-align: left; }
+  text-align: left;
+  margin-top: 10px;
+  padding: 3px 3px 3px 15px; }
