--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3248,3 +3248,5 @@ footer {
   text-align: left;
   margin-top: 10px;
   padding: 3px 3px 3px 15px; }
+  .field-richeditor .mock-insert:before {
+    content: 'Haz click aquí'; }
