--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3601,4 +3601,7 @@ footer {
   text-align: left;
   margin-top: 10px;
   padding: 3px 3px 3px 15px;
+  &:before {
+    content: 'Haz click aquí';
+  }
 }
