--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3598,7 +3598,7 @@ footer {
   background-color: #CECECE;
   color: #818181;
   font-size: 14px;
-  text-align: left;
+  text-align: center;
   margin-top: 10px;
-  padding: 3px 3px 3px 15px;
+  padding: 10px 3px 10px 15px;
 }
