--- a/plugins/rainlab/pages/assets/scss/style-event.scss
+++ b/plugins/rainlab/pages/assets/scss/style-event.scss
@@ -141,6 +141,7 @@
       transform: rotate(-9deg);
       text-align: center;
       font-family: Ryssa;
+      z-index: 10;
     }
   }
   .send-info {
