--- a/plugins/rainlab/pages/assets/css/style-event.css
+++ b/plugins/rainlab/pages/assets/css/style-event.css
@@ -142,7 +142,8 @@
       font-size: 144px;
       transform: rotate(-9deg);
       text-align: center;
-      font-family: Ryssa; }
+      font-family: Ryssa;
+      z-index: 10; }
   .header-experience .send-info {
     width: 391px;
     height: 105px;
