--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3245,9 +3245,10 @@ footer {
 .field-richeditor .mock-insert {
   width: 100%;
   display: block !important;
-  background-color: #CECECE;
   color: #818181;
   font-size: 14px;
   text-align: center;
-  margin-top: 10px;
-  padding: 10px 3px 10px 15px; }
+  margin-top: 10px; }
+  .field-richeditor .mock-insert img {
+    width: 100%;
+    object-fit: cover; }
