--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3610,8 +3610,6 @@ footer {
   font-size: 14px;
   text-align: center;
   margin-top: 10px;
-  img {
-    width: 100%;
-    object-fit: cover;
-  }
+  background-image: url('/storage/app/media/uploaded-files/templates/insert-svg.svg');
+  background-size: cover;
 }
