--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3605,6 +3605,7 @@ footer {
 }
 .field-richeditor .mock-insert {
   width: 100%;
+  height: 40px;
   display: block !important;
   color: #818181;
   font-size: 14px;
