--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3613,4 +3613,5 @@ footer {
   margin-top: 10px;
   background-image: url('/storage/app/media/uploaded-files/templates/insert-svg.svg');
   background-size: cover;
+  background-position: center;
 }
