--- a/plugins/rainlab/pages/assets/scss/style-village.scss
+++ b/plugins/rainlab/pages/assets/scss/style-village.scss
@@ -153,6 +153,7 @@ transform: $value;
   background-size: cover;
   background-attachment: fixed;
   z-index: 10;
+  border-top: 100px solid white;
   background-color: white;
   .img-destacada {
     mask-image: url('../svg/mask4.svg');
