--- a/plugins/rainlab/pages/assets/css/style-village.css
+++ b/plugins/rainlab/pages/assets/css/style-village.css
@@ -129,6 +129,7 @@
   background-size: cover;
   background-attachment: fixed;
   z-index: 10;
+  border-top: 100px solid white;
   background-color: white; }
   .img-village .img-destacada {
     mask-image: url("../svg/mask4.svg");
