--- a/themes/default/partials/site/headerexp.htm
+++ b/themes/default/partials/site/headerexp.htm
@@ -26,6 +26,24 @@
   </div>
 </div>
 
+<div id="out-features" class="event-features">
+  <div class="feature-exp">
+    <img src="{{preurl}}/storage/app/media/uploaded-files/templates/calendar-exp.svg">
+    <p class="feature-txt">Nº días</p>
+  </div>
+  <div class="feature-exp">
+    <img src="{{preurl}}/storage/app/media/uploaded-files/templates/beach-exp.svg">
+    <p class="feature-txt">Categoría 1</p>
+  </div>
+  <div class="feature-exp">
+    <img src="{{preurl}}/storage/app/media/uploaded-files/templates/natu-exp.svg">
+    <p class="feature-txt">Categoría 2</p>
+  </div>
+  <div class="feature-exp">
+    <img src="{{preurl}}/storage/app/media/uploaded-files/templates/cultura-event.svg">
+    <p class="feature-txt">Tipo de visita</p>
+  </div>
+</div>
 
 <div id="modal-exp"> <!-- data-iziModal-fullscreen="true"  data-iziModal-title="Welcome"  data-iziModal-subtitle="Subtitle"  data-iziModal-icon="icon-home" -->
     <!-- Modal content -->
