--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2950,6 +2950,10 @@ html, body {
     line-height: 130px !important;
   }
 
+  .header-experience .header-container {
+    margin-top: 90px !important;
+  }
+
   .background-image {
     top: 0px !important;
   }
