--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2950,6 +2950,14 @@ html, body {
     line-height: 130px !important;
   }
 
+  #out-features {
+    .feature-exp {
+      &:first-child {
+        padding-top: 0px !important;
+      }
+    }
+  }
+
   .header-experience .header-container {
     margin-top: 90px !important;
   }
