--- a/themes/default/partials/site/menu.htm
+++ b/themes/default/partials/site/menu.htm
@@ -32,12 +32,12 @@
             {% set tt = '.'~item.title %}
             <li class="menu-item"><a href="{{ item.url }}">{{ tt|_ }}</a></li>
           {% endfor %}
-          <li class="menu-item"><a class="dark-menu" href="{{url('/')}}/{{lang}}/municipios">{{ 'Todos los munucipios'|_ }}</a></li>
+          <li class="menu-item"><a class="dark-menu" href="{{url('/')}}/{{lang}}/municipios">{{ 'Todos los municipios'|_ }}</a></li>
           <li class="menu-item"><a class="dark-menu" href="{{url('/')}}/{{lang}}/comarcas">{{ 'Todas las comarcas'|_ }}</a></li>
         </ul>
         <ul class="menu-mobile">
-          <li class="menu-item"><a class="dark-menu" href="{{url('/')}}/{{lang}}/municipios">{{ 'Todos los munucipios'|_ }}</a></li>
-          <li class="menu-item"><a class="dark-menu" href="{{url('/')}}/{{lang}}/comarcas">{{ 'Todas las comarcas'|_ }}</a></li>          
+          <li class="menu-item"><a class="dark-menu" href="{{url('/')}}/{{lang}}/municipios">{{ 'Todos los municipios'|_ }}</a></li>
+          <li class="menu-item"><a class="dark-menu" href="{{url('/')}}/{{lang}}/comarcas">{{ 'Todas las comarcas'|_ }}</a></li>
         </ul>
       </div>
 
