--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5581,3 +5581,7 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
     text-align: center; }
   .custom-wysiwyg:hover {
     background: #dddddd; }
+
+/* PANTALLA COMPLETA */
+.fr-fullscreen .fr-element.fr-view {
+  margin-bottom: 200px !important; }
