--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2267,4 +2267,7 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
   .fr-element.fr-view {
     margin-bottom: 200px !important;
   }
+  .ml-btn {
+    z-index: 100;
+  }
 }
