--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5588,3 +5588,6 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
 
 .fr-fullscreen .ml-btn {
   z-index: 100; }
+
+.ml-btn {
+  top: -200px !important; }
