--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2271,3 +2271,7 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
     z-index: 100;
   }
 }
+
+.field-richeditor:not(:not(> .fr-fullscreen)) + .ml-btn {
+  top: -200px !important;
+}
