--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2272,6 +2272,6 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
   }
 }
 
-.field-richeditor:not(:not(> .fr-fullscreen)) + .ml-btn {
+.field-richeditor:not(> .fr-fullscreen) + .ml-btn {
   top: -200px !important;
 }
