--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5585,3 +5585,7 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
 /* PANTALLA COMPLETA */
 .fr-fullscreen .fr-element.fr-view {
   margin-bottom: 200px !important; }
+
+.fr-fullscreen .ml-btn {
+  top: -200px;
+  z-index: 100; }
