--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5587,5 +5587,8 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
   margin-bottom: 200px !important; }
 
 .fr-fullscreen .ml-btn {
-  top: -200px;
-  z-index: 100; }
+  top: -405px !important;
+  z-index: 100 !important; }
+
+.fr-fullscreen .ml-dropdown-menu {
+  top: -376px !important; }
