--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2268,7 +2268,10 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
     margin-bottom: 200px !important;
   }
   .ml-btn {
-    top: -200px;
-    z-index: 100;
+    top: -405px !important;
+    z-index: 100 !important;
+  }
+  .ml-dropdown-menu {
+    top: -376px !important;
   }
 }
