--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2267,7 +2267,7 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
   .fr-element.fr-view {
     margin-bottom: 200px !important;
   }
-  div[href*="MLRichEditor-formEvento"] + .ml-btn {
+  div[id*="MLRichEditor-formEvento"] + .ml-btn {
     top: -609px !important;
   }
   .ml-btn {
