--- a/plugins/rainlab/pages/widgets/eventolist/partials/_treebranch.htm
+++ b/plugins/rainlab/pages/widgets/eventolist/partials/_treebranch.htm
@@ -37,13 +37,11 @@
                 <label for="<?= $cbId ?>"></label>
             </div>
         </div>
-        <a class='duplicate'
-        data-toggle="tooltip"
-        data-placement="bottom"
-        data-delay="500"
-        title="Duplicar evento"
-        data-request='onCopyEvent' data-request-data="fileNamePost: '<?= e($fileName) ?>' , fileUrlPost: '<?= $pageObj->page->getViewBag()->property('url') ?>', fileTitlePost: '<?= $pageObj->page->getViewBag()->property('title') ?>'">
-          <img src="/storage/app/media/uploaded-files/templates/duplicate.svg">
+        <a class='duplicate' data-request='onCopyEvent' data-request-data="fileNamePost: '<?= e($fileName) ?>' , fileUrlPost: '<?= $pageObj->page->getViewBag()->property('url') ?>', fileTitlePost: '<?= $pageObj->page->getViewBag()->property('title') ?>'">
+          <img data-toggle="tooltip"
+          data-placement="bottom"
+          data-delay="200"
+          title="Duplicar evento" src="/storage/app/media/uploaded-files/templates/duplicate.svg">
         </a>
         <ol>
             <?php if ($subpages = $pageObj->subpages): ?>
