--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5583,12 +5583,16 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
     background: #dddddd; }
 
 /* PANTALLA COMPLETA */
-.fr-fullscreen .fr-element.fr-view {
-  margin-bottom: 200px !important; }
-
-.fr-fullscreen .ml-btn {
-  top: -409px !important;
-  z-index: 999 !important; }
-
-.fr-fullscreen .ml-dropdown-menu {
-  top: -376px !important; }
+.fr-fullscreen {
+  /* EXPERIENCIAS */ }
+  .fr-fullscreen .fr-element.fr-view {
+    margin-bottom: 200px !important; }
+  .fr-fullscreen div[id*="MLRichEditor-formExperience"] + .ml-btn {
+    top: -506px !important; }
+  .fr-fullscreen div[id*="MLRichEditor-formExperience"] ~ .ml-dropdown-menu {
+    top: -478px !important; }
+  .fr-fullscreen .ml-btn {
+    top: -409px !important;
+    z-index: 999 !important; }
+  .fr-fullscreen .ml-dropdown-menu {
+    top: -376px !important; }
