--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2267,9 +2267,13 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
   .fr-element.fr-view {
     margin-bottom: 200px !important;
   }
-  // div[id*="MLRichEditor-formEvento"] + .ml-btn {
-  //   top: -509px !important;
-  // }
+  /* EXPERIENCIAS */
+  div[id*="MLRichEditor-formExperience"] + .ml-btn {
+    top: -506px !important;
+  }
+  div[id*="MLRichEditor-formExperience"] ~ .ml-dropdown-menu {
+    top: -478px !important;
+  }
   .ml-btn {
     top: -409px !important;
     z-index: 999 !important;
